--- a/Quotes/index.html
+++ b/Quotes/index.html
@@ -39,7 +39,7 @@
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/1/yyyy">
-<!--                        <input class="form-control" id="city" type="text" placeholder=" "> -->
+                        <input class="form-control" id="city" type="text" placeholder=" "> 
                       </li>
                     </ul>
                   </div>
