--- a/Quotes/index.html
+++ b/Quotes/index.html
@@ -38,12 +38,13 @@
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/1/yyyy">
-                        <input class="form-control" id="city" type="text" placeholder=" "> 
+                        <input class="form-control" id="datetime" type="text" placeholder="yyyy">
+<!--                        <input class="form-control" id="city" type="text" placeholder=" "> -->
                       </li>
                     </ul>
                   </div>
                   <button id="filter-btn" type="submit" class="btn btn-default">Filter Table</button>
+                  <button id="Clr-btn" type="submit" class="btn btn-default">Clear Filter</button>
                 </form>
               </div>
             </div>
